--- a/Dockerfile.vid
+++ b/Dockerfile.vid
@@ -17,11 +17,12 @@ COPY --chown=myuser:myuser create_tables.py create_tables.py
 COPY --chown=myuser:myuser upload_config.yaml upload_config.yaml
 COPY --chown=myuser:myuser get_videos.py get_videos.py
 COPY --chown=myuser:myuser download_video.py download_video.py
+COPY --chown=myuser:myuser play_video.py play_video.py
 RUN pip install --user -r requirements.txt
 
 ENV PATH="/home/myuser/.local/bin:${PATH}"
-ENV FLASK_APP=main
-ENV FLASK_RUN_PORT=5000
+ENV FLASK_APP=play_video
+ENV FLASK_RUN_PORT=5003
 ENV FLASK_RUN_HOST=0.0.0.0
 
 CMD ["flask", "run"]
